cas对接配置中心

--- a/sourcecode/breeze/storm/storm-cas/src/main/resources/bootstrap.properties
+++ b/sourcecode/breeze/storm/storm-cas/src/main/resources/bootstrap.properties
@@ -5,55 +5,27 @@
 # This should map to a cas.yml or cas.properties file.
 #
 spring.application.name=cas
-spring.profiles.active=standalone
-spring.profiles.include=jdbc
+#spring.profiles.active=standalone
+#spring.profiles.include=jdbc
 
 ##
 # Configuration server is off by default.
 #
-spring.cloud.config.enabled=false
+spring.cloud.config.enabled=true
 
-##
-# Define where the configuration server is running
-# and what credentials are used to access it.
-# By default, basic authN is used.
-#
-#spring.cloud.config.profile=native
-#spring.cloud.config.server.native.searchLocations=file:///etc/cas/config
+#寻找配置中心为sso-dev.properties
+spring.profiles.active=dev,dev-jdbc
+#指定配置中心地址
+spring.cloud.config.uri=http://127.0.0.1:18000/
 
-##
-# Load settings from an internal/external Git repository.y
-#
-#spring.profiles.active=default
-#spring.cloud.config.server.git.uri=https://github.com/repoName/config
-#spring.cloud.config.server.git.uri=file://${user.home}/config
-#spring.cloud.config.server.git.username=
-#spring.cloud.config.server.git.password=
-
-##
-# Load settings from HasiCorp’s Vault.
-#
-#spring.cloud.vault.host=127.0.0.1
-#spring.cloud.vault.port=8200
-#spring.cloud.vault.connectionTimeout=3000
-#spring.cloud.vault.readTimeout=5000
-#spring.cloud.vault.enabled=true
-#spring.cloud.vault.fail-fast=true
-#spring.cloud.vault.token=1305dd6a-a754-f145-3563-2fa90b0773b7
-#spring.cloud.vault.scheme=http
-#spring.cloud.vault.generic.enabled=true
-#spring.cloud.vault.generic.backend=secret
-
-##
-# Load settings from MongoDb.
-#
-#cas.spring.cloud.mongo.uri=mongodb://casuser:Mellon@ds061954.mongolab.com:61954/jasigcas
-
-
-#spring.cloud.config.watch.enabled=true
-#spring.cloud.config.watch.initialDelay=30000
-#spring.cloud.config.watch.delay=1000
-#spring.cloud.config.fail-fast=true
+#支持自动任务去配置中心刷新配置
+spring.cloud.config.watch.enabled=true
+#30秒刷新一次
+spring.cloud.config.watch.initialDelay=30000
+#请求配置中心超时
+spring.cloud.config.watch.delay=1000
+#快速失败
+spring.cloud.config.failFast=true
 
 
 ##
@@ -65,6 +37,7 @@ spring.cloud.config.enabled=false
 #encrypt.keyStore.alias=DaKey
 #encrypt.keyStore.secret=changeme
 
+#检查配置健康
 health.config.enabled=true
 
 # Do NOT modify this line below.
