--- a/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
+++ b/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
@@ -11,7 +11,7 @@ app.ignoreMatchers=/static/**,/webjars/**
 
 server.name=${app.host}
 
-cas.server.prefixUrl=https://storm.cas.com:8443/storm-cas
+cas.server.prefixUrl=https://cas.earth.com:8443/storm-cas
 cas.server.loginUrl=${cas.server.prefixUrl}/login
 cas.server.logoutUrl=${cas.server.prefixUrl}/logout
 
