--- a/sourcecode/breeze/storm/pom.xml
+++ b/sourcecode/breeze/storm/pom.xml
@@ -31,6 +31,7 @@
 		<commons-beanutils.version>1.9.3</commons-beanutils.version>
 		<commons-collections.version>3.2.2</commons-collections.version>
 		<commons-fileupload>1.3.3</commons-fileupload>
+		<commons-lang.version>2.6</commons-lang.version>
 		<ehcache.version>2.10.3</ehcache.version>
 		<ehcache3.version>3.2.1</ehcache3.version>
 		<freemarker.version>2.3.25-incubating</freemarker.version>
