--- a/sourcecode/breeze/storm/storm-cas/pom.xml
+++ b/sourcecode/breeze/storm/storm-cas/pom.xml
@@ -99,11 +99,22 @@
 			<version>${cas.version}</version> </dependency> -->
 
 		<dependency>
+			<groupId>org.apereo.cas</groupId>
+			<artifactId>cas-server-support-eureka-client</artifactId>
+			<version>${cas.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>${commons-lang.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>mysql</groupId>
@@ -165,15 +176,15 @@
 						<overlay>
 							<groupId>org.apereo.cas</groupId>
 							<artifactId>cas-server-webapp${app.server}</artifactId>
-							<!--原有的服务不再初始化进去-->
-                            <excludes>
-                                <exclude>WEB-INF/classes/services/*</exclude>
-                                <exclude>WEB-INF/classes/application.*</exclude>
-                                <exclude>WEB-INF/classes/bootstrap.properties</exclude>
-                                <exclude>**/user-details.properties</exclude>
-                                <exclude>**/truststore.jks</exclude>
-                                <exclude>**/*.md</exclude>
-                            </excludes>
+							<!--原有的服务不再初始化进去 -->
+							<excludes>
+								<exclude>WEB-INF/classes/services/*</exclude>
+								<exclude>WEB-INF/classes/application.*</exclude>
+								<exclude>WEB-INF/classes/bootstrap.properties</exclude>
+								<exclude>**/user-details.properties</exclude>
+								<exclude>**/truststore.jks</exclude>
+								<exclude>**/*.md</exclude>
+							</excludes>
 						</overlay>
 					</overlays>
 				</configuration>
