服务注册中心

--- a/sourcecode/breeze/cloud/cloud-config/src/main/resources/config-repo/application.yml
+++ b/sourcecode/breeze/cloud/cloud-config/src/main/resources/config-repo/application.yml
@@ -3,4 +3,4 @@ eureka:
     preferIpAddress: true
   client:
     serviceUrl:
-      defaultZone: http://registry.earth.com:18888/eureka
+      defaultZone: http://registry.earth.com:18888/registry
