--- a/sourcecode/breeze/cloud/cloud-config/src/main/resources/application.yml
+++ b/sourcecode/breeze/cloud/cloud-config/src/main/resources/application.yml
@@ -33,4 +33,4 @@ eureka:
     preferIpAddress: true
   client:
     serviceUrl:
-      defaultZone: http://127.0.0.1:18888/eureka/
+      defaultZone: http://127.0.0.1:18888/registry/
