--- a/sourcecode/breeze/cloud/cloud-config/src/main/resources/config-repo/application.yml
+++ b/sourcecode/breeze/cloud/cloud-config/src/main/resources/config-repo/application.yml
@@ -1,6 +1,7 @@
 eureka:
   instance:
     preferIpAddress: true
+    instanceId: ${spring.cloud.client.ipAddress}:${server.port}
   client:
     serviceUrl:
       defaultZone: http://registry.earth.com:18888/registry
