--- a/sourcecode/breeze/cloud/cloud-config/src/main/resources/config-repo/cas/cas-dev.properties
+++ b/sourcecode/breeze/cloud/cloud-config/src/main/resources/config-repo/cas/cas-dev.properties
@@ -3,6 +3,7 @@
 #
 server.contextPath=/storm-cas
 server.port=8443
+register.port=${cas.server.http.port}
 
 server.ssl.keyStore=/etc/cas/server.keystore
 server.ssl.keyStorePassword=justlive1
