--- a/sourcecode/breeze/cloud/cloud-registry/pom.xml
+++ b/sourcecode/breeze/cloud/cloud-registry/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>cloud-registry</artifactId>
 
 	<name>cloud-registry</name>
-	<url>http://maven.apache.org</url>
+	<url>https://gitee.com/justlive1/earth</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
