--- a/sourcecode/breeze/rain/rain-api/pom.xml
+++ b/sourcecode/breeze/rain/rain-api/pom.xml
@@ -14,7 +14,7 @@
 	<packaging>jar</packaging>
 
 	<name>rain-api</name>
-	<url>http://maven.apache.org</url>
+	<url>https://gitee.com/justlive1/earth</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
