--- a/sourcecode/breeze/snow/pom.xml
+++ b/sourcecode/breeze/snow/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>pom</packaging>
 
 	<name>snow</name>
-	<url>http://maven.apache.org</url>
+	<url>https://gitee.com/justlive1/earth</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
