--- a/sourcecode/breeze/cloud/cloud-registry-client/pom.xml
+++ b/sourcecode/breeze/cloud/cloud-registry-client/pom.xml
@@ -20,11 +20,19 @@
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+		</dependency>
+
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 
 </project>
