增加cloud-registry-client-eureka

--- a/sourcecode/breeze/cloud/cloud-registry-client-eureka/pom.xml
+++ b/sourcecode/breeze/cloud/cloud-registry-client-eureka/pom.xml
@@ -9,10 +9,10 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>cloud-registry-client</artifactId>
+	<artifactId>cloud-registry-client-eureka</artifactId>
 	<packaging>jar</packaging>
 
-	<name>cloud-registry-client</name>
+	<name>cloud-registry-client-eureka</name>
 	<url>https://gitee.com/justlive1/earth</url>
 
 	<properties>
@@ -22,13 +22,29 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter</artifactId>
+			<groupId>git.oschina.net.justlive1.breeze.cloud</groupId>
+			<artifactId>cloud-registry-client</artifactId>
 		</dependency>
 
 		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-web</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
 		</dependency>
 
 		<dependency>
@@ -36,7 +52,5 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
-
 </project>
