--- a/sourcecode/breeze/cloud/cloud-registry/src/main/resources/application.yml
+++ b/sourcecode/breeze/cloud/cloud-registry/src/main/resources/application.yml
@@ -8,6 +8,10 @@ earth:
   registry:
     path: /registry
 
+spring:
+  application:
+    name: registry
+
 eureka:
   server:
     enableSelfPreservation: true
