--- a/sourcecode/breeze/rain/rain-service/pom.xml
+++ b/sourcecode/breeze/rain/rain-service/pom.xml
@@ -27,6 +27,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>git.oschina.net.justlive1.breeze.cloud</groupId>
+			<artifactId>cloud-registry-client${cloud-registry-client}</artifactId>
+		</dependency>
+
+
+		<dependency>
 			<groupId>git.oschina.net.justlive1.breeze.rain</groupId>
 			<artifactId>rain-api</artifactId>
 		</dependency>
