增加springcloud使用cloud-registry-client注册服务校验

--- a/sourcecode/breeze/rain/rain-service/src/main/resources/config/application.properties
+++ b/sourcecode/breeze/rain/rain-service/src/main/resources/config/application.properties
@@ -2,6 +2,7 @@
 app.host=http://127.0.0.1:8081
 app.name=rain-service
 
+earth.registry.configPath=config/application.properties
 
 earth.registry.name=${app.name}
 earth.registry.port=8081
