增加注册client配置，common请求

--- a/sourcecode/breeze/rain/rain-service/src/main/resources/config/application.properties
+++ b/sourcecode/breeze/rain/rain-service/src/main/resources/config/application.properties
@@ -2,8 +2,8 @@
 app.host=http://127.0.0.1:8081
 app.name=rain-service
 
+earth.registry.enabled=false
 earth.registry.configPath=config/application.properties
-
 earth.registry.name=${app.name}
 earth.registry.port=8081
 earth.registry.vipAddress=127.0.0.1
