--- a/sourcecode/breeze/snow/snow-common-base/pom.xml
+++ b/sourcecode/breeze/snow/snow-common-base/pom.xml
@@ -29,7 +29,12 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
