--- a/sourcecode/breeze/storm/pom.xml
+++ b/sourcecode/breeze/storm/pom.xml
@@ -248,6 +248,12 @@
 			    <groupId>org.apache.shiro</groupId>
 			    <artifactId>shiro-cas</artifactId>
 			    <version>${shiro.version}</version>
+			    <exclusions>
+			    	<exclusion>
+			    		<groupId>javax.servlet</groupId>
+			    		<artifactId>servlet-api</artifactId>
+			    	</exclusion>
+			    </exclusions>
 			</dependency>
 			<!-- shiro end -->
 			
