--- a/sourcecode/breeze/storm/storm-cas-management/pom.xml
+++ b/sourcecode/breeze/storm/storm-cas-management/pom.xml
@@ -16,6 +16,7 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
+		<spring.version>4.3.12.RELEASE</spring.version>
 		<mainClassName>org.springframework.boot.loader.WarLauncher</mainClassName>
 		<isExecutable>false</isExecutable>
 		<manifestFileToUse>${project.build.directory}/war/work/org.apereo.cas/cas-management-webapp/META-INF/MANIFEST.MF</manifestFileToUse>
@@ -51,10 +52,20 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>net.oschina.git.justlive1.breeze.snow</groupId>
+			<artifactId>snow-common-base</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apereo.cas</groupId>
 			<artifactId>cas-management-webapp</artifactId>
-			<version>${cas.version}</version>
+			<version>5.2.1</version>
 			<type>war</type>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
 		</dependency>
 
 		<dependency>
@@ -62,7 +73,7 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
-		
+
 	</dependencies>
 
 	<build>
