--- a/sourcecode/breeze/storm/storm-cas-management/pom.xml
+++ b/sourcecode/breeze/storm/storm-cas-management/pom.xml
@@ -59,7 +59,7 @@
 		<dependency>
 			<groupId>org.apereo.cas</groupId>
 			<artifactId>cas-management-webapp</artifactId>
-			<version>5.2.1</version>
+			<version>${cas.version}</version>
 			<type>war</type>
 		</dependency>
 		
