--- a/sourcecode/breeze/storm/storm-cas-management/pom.xml
+++ b/sourcecode/breeze/storm/storm-cas-management/pom.xml
@@ -56,13 +56,20 @@
 			<artifactId>snow-common-base</artifactId>
 		</dependency>
 
+
 		<dependency>
 			<groupId>org.apereo.cas</groupId>
 			<artifactId>cas-management-webapp</artifactId>
-			<version>5.2.1</version>
+			<version>${cas.version}</version>
 			<type>war</type>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.apereo.cas</groupId>
+			<artifactId>cas-server-support-eureka-client</artifactId>
+			<version>${cas.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
