--- a/sourcecode/breeze/storm/storm-cas-management/pom.xml
+++ b/sourcecode/breeze/storm/storm-cas-management/pom.xml
@@ -71,6 +71,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apereo.cas</groupId>
+			<artifactId>cas-server-support-json-service-registry</artifactId>
+			<version>${cas.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 		</dependency>
