--- a/sourcecode/breeze/cloud/cloud-config/pom.xml
+++ b/sourcecode/breeze/cloud/cloud-config/pom.xml
@@ -20,6 +20,11 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>net.oschina.git.justlive1.breeze.cloud</groupId>
+			<artifactId>cloud-admin-client</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-server</artifactId>
 		</dependency>
