--- a/sourcecode/breeze/cloud/pom.xml
+++ b/sourcecode/breeze/cloud/pom.xml
@@ -112,6 +112,12 @@
 			<!-- self -->
 			<dependency>
 				<groupId>net.oschina.git.justlive1.breeze.cloud</groupId>
+				<artifactId>cloud-admin-client</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>net.oschina.git.justlive1.breeze.cloud</groupId>
 				<artifactId>cloud-registry-client</artifactId>
 				<version>${project.version}</version>
 			</dependency>
