--- a/sourcecode/breeze/cloud/cloud-registry/pom.xml
+++ b/sourcecode/breeze/cloud/cloud-registry/pom.xml
@@ -21,6 +21,11 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>net.oschina.git.justlive1.breeze.cloud</groupId>
+			<artifactId>cloud-admin-client</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka-server</artifactId>
 		</dependency>
@@ -41,6 +46,7 @@
 					<execution>
 						<goals>
 							<goal>repackage</goal>
+							<goal>build-info</goal>
 						</goals>
 					</execution>
 				</executions>
