增加cloud-admin-server-eureka

--- a/sourcecode/breeze/cloud/cloud-admin-server/src/main/resources/application.properties
+++ b/sourcecode/breeze/cloud/cloud-admin-server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=10000
+spring.application.name=admin-server
 spring.boot.admin.url=http://cloud.earth.com:${server.port}
 info.version=@project.version@
 
