--- a/sourcecode/breeze/cloud/cloud-config/src/main/resources/config-repo/cas/cas-dev.properties
+++ b/sourcecode/breeze/cloud/cloud-config/src/main/resources/config-repo/cas/cas-dev.properties
@@ -5,6 +5,17 @@ server.contextPath=/storm-cas
 server.port=8443
 register.port=${cas.server.http.port}
 
+eureka.instance.securePortEnabled=false
+eureka.instance.securePort=${server.port}
+eureka.instance.nonSecurePortEnabled=true
+eureka.instance.nonSecurePort=${cas.server.http.port}
+eureka.instance.statusPageUrlPath=${server.contextPath}${management.contextPath}/info
+eureka.instance.healthCheckUrlPath=${server.contextPath}${management.contextPath}/health
+
+eureka.client.securePortEnabled=false
+eureka.client.nonSecurePortEnabled=true
+
+
 server.ssl.keyStore=/etc/cas/server.keystore
 server.ssl.keyStorePassword=justlive1
 server.ssl.keyAlias=cas.earth.com
@@ -97,11 +108,25 @@ cas.server.ajp.allowTrace=false
 # The following properties describe access controls and settings for the /status endpoint of 
 # CAS which provides administrative functionality and oversight into the CAS software. 
 #
+
 endpoints.enabled=true
 endpoints.sensitive=true
-management.contextPath=/status
 endpoints.restart.enabled=false
 endpoints.shutdown.enabled=false
+endpoints.autoconfig.enabled=true
+endpoints.beans.enabled=true
+endpoints.bus.enabled=true
+endpoints.configprops.enabled=true
+endpoints.dump.enabled=true
+endpoints.env.enabled=true
+endpoints.health.enabled=true
+endpoints.features.enabled=true
+endpoints.info.enabled=true
+endpoints.loggers.enabled=true
+endpoints.logfile.enabled=true
+endpoints.trace.enabled=true
+endpoints.docs.enabled=false
+endpoints.heapdump.enabled=true
 
 # IP address may be enough to protect all endpoints.
 # If you wish to protect the admin pages via CAS itself, configure the rest.
@@ -158,7 +183,7 @@ spring.thymeleaf.prefix=classpath:/templates/
 
 
 
-management.security.enabled=true
+management.security.enabled=false
 management.security.roles=ACTUATOR,ADMIN
 management.security.sessions=if_required
 management.contextPath=/status
@@ -166,7 +191,7 @@ management.addApplicationContextHeader=false
 
 security.basic.authorizeMode=role
 security.basic.enabled=false
-security.basic.path=/cas/status/**
+security.basic.path=${server.contextPath}/${management.contextPath}/**
 
 
 ##
