--- a/sourcecode/breeze/cloud/cloud-admin-server-eureka/src/main/resources/application.properties
+++ b/sourcecode/breeze/cloud/cloud-admin-server-eureka/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 server.port=10001
 spring.application.name=admin-server
+
+spring.boot.admin.hazelcast.enabled=true
+spring.boot.admin.hazelcast.applicationStore=spring-boot-admin-application-store
+spring.boot.admin.hazelcast.eventStore=spring-boot-admin-event-store
+
 info.version=@project.version@
 
 eureka.instance.leaseRenewalIntervalInSeconds=10
