--- a/sourcecode/breeze/cloud/cloud-admin-server/pom.xml
+++ b/sourcecode/breeze/cloud/cloud-admin-server/pom.xml
@@ -36,6 +36,16 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.hazelcast</groupId>
+			<artifactId>hazelcast</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
