--- a/sourcecode/breeze/cloud/cloud-admin-server/src/main/resources/application.properties
+++ b/sourcecode/breeze/cloud/cloud-admin-server/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-server.port=10000
+server.port=10001
 spring.application.name=admin-server
 spring.boot.admin.url=http://cloud.earth.com:${server.port}
-info.version=@project.version@
 
+spring.boot.admin.hazelcast.enabled=true
+spring.boot.admin.hazelcast.applicationStore=spring-boot-admin-application-store
+spring.boot.admin.hazelcast.eventStore=spring-boot-admin-event-store
+
+info.version=@project.version@
