修改配置文件依赖传递

--- a/sourcecode/breeze/cloud/cloud-admin-server-eureka/src/main/resources/application.properties
+++ b/sourcecode/breeze/cloud/cloud-admin-server-eureka/src/main/resources/application.properties
@@ -1,15 +1,7 @@
 server.port=10001
+
 spring.application.name=admin-server
+spring.profiles.active=common,eureka
 
-spring.boot.admin.hazelcast.enabled=true
-spring.boot.admin.hazelcast.applicationStore=spring-boot-admin-application-store
-spring.boot.admin.hazelcast.eventStore=spring-boot-admin-event-store
-
-info.version=@project.version@
-
-eureka.instance.leaseRenewalIntervalInSeconds=10
-eureka.client.registryFetchIntervalSeconds=5
-eureka.client.serviceUrl.defaultZone=http://registry.earth.com:12000/registry
-
-management.security.enabled=false
+spring.boot.admin.url=http://cloud.earth.com:${server.port}
 
