--- a/sourcecode/breeze/cloud/cloud-admin-server/src/main/resources/application-common.properties
+++ b/sourcecode/breeze/cloud/cloud-admin-server/src/main/resources/application-common.properties
@@ -7,5 +7,16 @@ spring.boot.admin.notify.reminder.enable=true
 spring.boot.admin.notify.reminder.periodForMinutes=5
 spring.boot.admin.notify.reminder.scheduledFixedRate=60000
 
+spring.mail.host=smtp.163.com
+spring.mail.username=
+spring.mail.password=
+
+spring.boot.admin.notify.mail.enabled=true
+spring.boot.admin.notify.mail.ignoreChanges=UNKNOWN:UP
+spring.boot.admin.notify.mail.from=${spring.mail.username}
+spring.boot.admin.notify.mail.to=qq11419041@163.com
+spring.boot.admin.notify.mail.subject=#{application.name} (#{application.id}) is #{to.status}
+spring.boot.admin.notify.mail.text=#{application.name} (#{application.id})\nstatus changed from #{from.status} to #{to.status}\n\n#{application.healthUrl}
+
 
 info.version=@project.version@
