--- a/sourcecode/breeze/cloud/cloud-admin-server/src/main/resources/application-common.properties
+++ b/sourcecode/breeze/cloud/cloud-admin-server/src/main/resources/application-common.properties
@@ -7,9 +7,9 @@ spring.boot.admin.notify.reminder.enable=true
 spring.boot.admin.notify.reminder.periodForMinutes=5
 spring.boot.admin.notify.reminder.scheduledFixedRate=60000
 
-spring.mail.host=smtp.163.com
-spring.mail.username=
-spring.mail.password=
+spring.mail.host=smtp.mail.com
+spring.mail.username=cloud.earth.notifier@mail.com
+spring.mail.password=1234asdf
 
 spring.boot.admin.notify.mail.enabled=true
 spring.boot.admin.notify.mail.ignoreChanges=UNKNOWN:UP
