--- a/sourcecode/breeze/cloud/cloud-admin-server-eureka/src/main/resources/application-eureka.properties
+++ b/sourcecode/breeze/cloud/cloud-admin-server-eureka/src/main/resources/application-eureka.properties
@@ -1,5 +1,9 @@
 
 eureka.instance.leaseRenewalIntervalInSeconds=10
+
+eureka.instance.metadataMap.user.name=${security.user.name}
+eureka.instance.metadataMap.user.password=${security.user.password}
+
 eureka.client.registryFetchIntervalSeconds=5
 eureka.client.serviceUrl.defaultZone=http://registry.earth.com:12000/registry
 
