--- a/sourcecode/breeze/cloud/cloud-admin-server/src/main/resources/application-common.properties
+++ b/sourcecode/breeze/cloud/cloud-admin-server/src/main/resources/application-common.properties
@@ -3,7 +3,7 @@ spring.boot.admin.hazelcast.enabled=true
 spring.boot.admin.hazelcast.applicationStore=spring-boot-admin-application-store
 spring.boot.admin.hazelcast.eventStore=spring-boot-admin-event-store
 
-spring.boot.admin.notify.reminder.enable=true
+spring.boot.admin.notify.reminder.enabled=false
 spring.boot.admin.notify.reminder.periodForMinutes=5
 spring.boot.admin.notify.reminder.scheduledFixedRate=60000
 
@@ -11,12 +11,13 @@ spring.mail.host=smtp.mail.com
 spring.mail.username=cloud.earth.notifier@mail.com
 spring.mail.password=1234asdf
 
-spring.boot.admin.notify.mail.enabled=true
+spring.boot.admin.notify.mail.enabled=false
 spring.boot.admin.notify.mail.ignoreChanges=UNKNOWN:UP
 spring.boot.admin.notify.mail.from=${spring.mail.username}
 spring.boot.admin.notify.mail.to=qq11419041@163.com
 spring.boot.admin.notify.mail.subject=#{application.name} (#{application.id}) is #{to.status}
 spring.boot.admin.notify.mail.text=#{application.name} (#{application.id})\nstatus changed from #{from.status} to #{to.status}\n\n#{application.healthUrl}
 
+spring.boot.admin.routes.endpoints: env,metrics,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,activiti,hystrix.stream
 
 info.version=@project.version@
