--- a/sourcecode/breeze/cloud/cloud-admin-server-eureka/pom.xml
+++ b/sourcecode/breeze/cloud/cloud-admin-server-eureka/pom.xml
@@ -15,6 +15,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring.version>4.3.13.RELEASE</spring.version>
+		<spring-security.version>4.2.3.RELEASE</spring-security.version>
 	</properties>
 	<dependencies>
 
