--- a/sourcecode/breeze/cloud/cloud-admin-server-eureka/src/main/resources/application.properties
+++ b/sourcecode/breeze/cloud/cloud-admin-server-eureka/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-server.port=10001
+server.port=10000
 
 spring.application.name=admin-server
-spring.profiles.active=common,eureka
+spring.profiles.active=common,eureka,security
+
+logging.level.=info
