--- a/sourcecode/breeze/cloud/cloud-admin-server/pom.xml
+++ b/sourcecode/breeze/cloud/cloud-admin-server/pom.xml
@@ -16,13 +16,25 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring.version>4.3.13.RELEASE</spring.version>
+        <spring-security.version>4.2.3.RELEASE</spring-security.version>
 	</properties>
 
 	<dependencies>
 
 		<dependency>
+			<groupId>net.oschina.git.justlive1.breeze.snow</groupId>
+			<artifactId>snow-common-base</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
 		<dependency>
@@ -38,6 +50,21 @@
 		<dependency>
 			<groupId>de.codecentric</groupId>
 			<artifactId>spring-boot-admin-server-ui-hystrix</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-server-ui-turbine</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-server-ui-activiti</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-server-ui-login</artifactId>
 		</dependency>
 
 		<dependency>
