--- a/sourcecode/breeze/cloud/cloud-admin-server/src/main/resources/application.properties
+++ b/sourcecode/breeze/cloud/cloud-admin-server/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=10000
 
 spring.application.name=admin-server
-spring.profiles.active=common
+spring.profiles.active=common,security
 
 spring.boot.admin.url=http://cloud.earth.com:${server.port}
+
+
+logging.level.=info
