--- a/sourcecode/breeze/cloud/cloud-admin-server/src/main/resources/application-common.properties
+++ b/sourcecode/breeze/cloud/cloud-admin-server/src/main/resources/application-common.properties
@@ -1,4 +1,7 @@
 
+spring.boot.admin.monitor.connectTimeout=6000
+spring.boot.admin.monitor.readTimeout=6000
+
 spring.boot.admin.hazelcast.enabled=true
 spring.boot.admin.hazelcast.applicationStore=spring-boot-admin-application-store
 spring.boot.admin.hazelcast.eventStore=spring-boot-admin-event-store
