修改端口，怀疑是内置tomcat的bug

--- a/sourcecode/breeze/cloud/cloud-admin-server/src/main/resources/application.properties
+++ b/sourcecode/breeze/cloud/cloud-admin-server/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=10000
+server.port=13000
 
 spring.application.name=admin-server
 spring.profiles.active=common,security
 
-spring.boot.admin.url=http://cloud.earth.com:${server.port}
+spring.boot.admin.url=http://admin.earth.com:${server.port}
 
 
 logging.level.=info
