--- a/sourcecode/breeze/cloud/cloud-admin-client/src/main/resources/application.properties
+++ b/sourcecode/breeze/cloud/cloud-admin-client/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.boot.admin.url=http://cloud.earth.com:10000
+spring.boot.admin.url=http://admin.earth.com:10000
 info.version=@project.version@
 
